# Dual-arm-robot

./: README.md
piper_description/: CMakeLists.txt  package.xml
piper_description/urdf/: piper_description.csv  piper_description.urdf  piper_description.xacro  piper_marco.xacro
realsense2_description/urdf/: _d435.urdf.xacro  _materials.urdf.xacro  piper_double_d435i_camera.urdf.xacro
scout_description/: CMakeLists.txt  package.xml
scout_description/launch/: demo.launch.py  display.launch.py  display_combined_robot.launch
scout_description/me30_STL/: amr_forklift.urdf  driver_wheel.STL  front_wheel_asm_R.STL  steer_wheel.STL
scout_description/meshes_zyx/: link3_1_v1_1.stl  link3_1_v1_1_old.stl  link_1_1.stl  link_2_1.stl  link_4_1_1_v1_1.stl
scout_description/urdf/: combined_robot.xacro  combined_robot_doublearm.xacro
scout_description/urdf_zyx/: materials.xacro  zyx_R_1.gazebo  zyx_R_1.trans  zyx_R_1.xacro
scout_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
scout_robot_moveit_config/config/: combined_robot.ros2_control.xacro  combined_robot.srdf  combined_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
scout_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
